--- a/backend/app/views/spree/admin/payment_methods/index.html.erb
+++ b/backend/app/views/spree/admin/payment_methods/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for :page_title do %>
-  <%= plural_resource_name(Spree::PaymentMethod) %>
+  <%= Spree.t(:payment_methods) %>
 <% end %>
 
 <% content_for :page_actions do %>
