--- a/backend/app/views/spree/admin/stores/_form.html.erb
+++ b/backend/app/views/spree/admin/stores/_form.html.erb
@@ -75,7 +75,7 @@
 <div class="card mb-4">
   <div class="card-header">
     <h1 class="card-title mb-0 h5">
-      <%= Spree.t(:email).pluralize %>
+      <%= Spree.t(:email) %>
     </h1>
   </div>
   <div class="card-body">
