--- a/backend/app/views/spree/admin/store_credit_categories/index.html.erb
+++ b/backend/app/views/spree/admin/store_credit_categories/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for :page_title do %>
-  <%= Spree.t(:store_credit_category)
+  <%= Spree.t(:store_credit_category) %>
 <% end %>
 
 <% content_for :page_actions do %>
