--- a/core/app/views/spree/shared/_base_mailer_header.html.erb
+++ b/core/app/views/spree/shared/_base_mailer_header.html.erb
@@ -4,10 +4,10 @@
   <td class="email-masthead">
     <% if frontend_available? %>
       <%= link_to spree.root_url, class: 'template-label' do %>
-        <%= image_tag logo_url, class: 'logo', alt: store_name, title: store_name %>
+        <%= image_tag logo_path, class: 'logo', alt: store_name, title: store_name %>
       <% end %>
     <% else %>
-      <%= image_tag logo_url, class: 'logo', alt: store_name, title: store_name %>
+      <%= image_tag logo_path, class: 'logo', alt: store_name, title: store_name %>
     <% end %>
   </td>
 </tr>
