--- a/core/app/views/spree/shared/_purchased_items_table.html.erb
+++ b/core/app/views/spree/shared/_purchased_items_table.html.erb
@@ -41,7 +41,7 @@
         <td></td>
         <td>
           <p class="f-fallback purchase_total purchase_total--label">
-            <%= Spree.t(:tax) %> <%= label %>:
+            <%= Spree.t(:included) %> <%= label %>:
           </p>
         </td>
         <td>
